Commit de la tercera y cuarta celda de la tabla

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <td>Fila 2,C2</td>
             <td>Fila 2,C2</td>
         </tr>
+        <tr>
+            <td>Fila 3,C3</td>
+            <td>Fila 3,C3</td>
+        </tr>
     </table>
     
 </body>
