--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <td>Fila 3,C3</td>
             <td>Fila 3,C3</td>
         </tr>
+        <tr>
+            <td>Fila 4,C4</td>
+            <td>Fila 4,C4</td>
+        </tr>
     </table>
     
 </body>
