--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <tr>
             <td>Fila 2,C2</td>
             <td>Fila 2,C2</td>
+            <td>Fila 2,C2</td>
         </tr>
         <tr>
             <td>Fila 3,C3</td>
